# gl_proj

./: CMakeLists.txt  glad.c  main.cpp
glad/include/glad/: glad.h
